<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/new_task"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_navigate_before_24"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_width="0dp"
        android:id="@+id/til_title"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:hint="@string/title_task"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:id="@+id/til_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/ic_calendar"
        android:layout_marginEnd="16dp"
        android:hint="@string/data_task"
        app:layout_constraintTop_toBottomOf="@id/til_title"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/hour"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="none"
            android:focusable="false"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:id="@+id/hour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hora_task"
        app:layout_constraintTop_toTopOf="@id/til_date"
        app:startIconDrawable="@drawable/ic_timer"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toEndOf="@id/til_date"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:id="@+id/btn_cancel_task"
        app:layout_constraintBottom_toTopOf="@id/btn_new_task"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:text="@string/cancelar_task"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_task"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/btn_criar_task"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>